# FrameTV-GenAI-Artwork

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: LXC.md  VM.md
frameart/: .gitignore  __init__.py  api.py  artifacts.py  cli.py  config.py  jobs.py  pipeline.py  postprocess.py  public_domain.py
frameart/meural/: __init__.py  controller.py  discovery.py
frameart/providers/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  google_adapter.py  ollama_adapter.py  openai_adapter.py  registry.py
frameart/static/: index.html
frameart/tv/: __init__.py  cleanup.py  controller.py  discovery.py
frameart/upscalers/: __init__.py  base.py  local_http.py  none_upscaler.py  registry.py  remote_http.py
tests/: test_api.py  test_artifacts.py  test_cleanup.py  test_config.py  test_discovery.py  test_jobs.py  test_meural.py  test_pipeline.py  test_postprocess.py  test_providers.py  test_upscalers.py
